# onlne-store-fastapi

./: .env_template  .env_test  .gitignore  Dockerfile  README.md  alembic.ini  app.py  create_certs.py  docker-compose.test.yml  docker-compose.yml  front.py  pyproject.toml  requirements.txt  test.py
django/: README.md  apps.py  urls.py
frontend/templates/: base.html  cart.html  catalog.html  order.html  paymentsomeone.html  sale.html
src/: main.py
src/alembic/: custom_types.py  env.py  script.py.mako
src/alembic/versions/: 2025_02_02_1335-4d08808c776a_.py  2025_02_02_1500-0ff4c9510713_.py  2025_02_02_1940-7bcf14613806_.py  2025_02_02_1944-4958b9e60767_.py  2025_02_02_2102-a3654368c31e_.py  (+15 more)
src/catalog/admin/: review.py  (+3 more)
src/core/: __init__.py
src/django/: README.md  apps.py  urls.py
src/frontend/: routers.py
src/users/: models.py  routers.py
tests/: Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  test_app.py  utils.py
tests/catalog/: test_basket.py  test_categories.py  test_products.py
tests/catalogs/: test_basket.py  test_categories.py  test_products.py  test_reviews.py  test_tags.py
tests/data/: big_limit.json  limited_products.json  name_search.json  products_to_order.json  search_by_tags.json  sort_by_rating.json  sort_by_rating_increment.json  sort_by_reviews_1.json  sort_by_reviews_2.json
tests/orders/: test_orders.py
tests/profiles/: test_auth.py  test_profiles.py  utils.py
tests/reviews/: test_reviews.py
tests/shop/: clear_data.py  data.py  test_basket.py  test_orders.py  test_products.py  test_reviews.py  test_tags.py
(+161 files in other folders)
