[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
pydantic = "^2.10.6"
sqladmin = "^0.20.1"
fastapi-storages = "^0.3.0"
pillow = "^11.1.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
python-json-logger = "^3.2.1"

[tool.black]
line-length = 79
